Fixed css so that the midi player degrades properly.  The degraded link was being hidden by the CSS.
git-svn-id: file:///repos/FractalComposerDotCom/trunk@176 630928a3-496c-f744-9797-d1d2669399c2

--- a/public/stylesheets/fractalcomposer.css
+++ b/public/stylesheets/fractalcomposer.css
@@ -187,7 +187,8 @@ textarea#germ {
 }
 
 object.midi_player {
-    margin-left: -7px;
+    display: block;
+    margin: 10px auto;
 }
 
 form#compose_form input.button {
